    * Pass SQLMoreResults call to driver when in state 2 (not a cursor spec).
      Both the last two changes are not as per the original book state table
      but alling with the current MS driver manager
    * The -e option to isql got lost somewhere. Back in now
    * Update install-sh
    * SQLCancel assumed that the DM was being built with thread support

26th-November-2011
2.3.1
    
    * Change type definition of a integer in SQLConnect.c, just to avoid
      confusion
    * Allow setting the DM overrive values in the connection string to SQLDriverConnect
      for example
      "DRIVER={Easysoft ODBC-SQL Server};Server=myserver;UID=user;PWD=pass;DMStmtAttr=SQL_QUERY_TIMEOUT=10;"
    * Error and info message order was being inverted by the driver manager
    * Fix memory leak in SQLDriverConnect.c (Thanks JM)
    * The keyword matching for DRIVER=, DSN= etc was case sensitive. Make it insensitive now
    * Avoid sprintf NULL pointer problem in SQLGetDiagRec
    * Fix typo affecting the pooling of connections, (thanks Chris)
    * Fix SunCC _mcount problem
    * Attempt to stamp version info on the libs generated. There are aps in use linked against other 
      driver managers that expect VERS_3.52
    * Fix potential buffer overrun when using SAFEFILE
    * Fix mutex problem in the exit from __SQLGetInfo (thanks Richard)
    * Allow getting SQL_DM_VER via SQLGetInfo before connecting to a driver
    * Generate unixodbc_conf.h using macros to allow cross compiling
    * Fix some libltdl problems 
    * Fix some naiming problems with the cursor lib
    * Fix odbcinst problems on systems without pwd.h
    * Change lib version to 2 to reflect SQLLEN changes in v2.3
    * Fix threading problem (thanks Petr Vandrovec)
    * Allow use of lib name in a DRIVER= connection string
    * Change default threading protection to 0, most drivers should be thread
      safe by now. If the driver is at all thread safe, allow SQLCancel to bipass the
      interlock.